[package]
name = "coomono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3.19"
tokio = { version = "1", features = ["full"] }
onig = "6"
colored = "2"
clap = { version = "3.0.14", features = ["derive", "cargo"] }
log = { version = "0.4.14" }
simple_logger = { version = "2.1.0" }
select = "0.5.0"
sanitize-filename = "0.3.0"